<resources>
    <string name="app_name">Tanishq</string>
    <string name="title_activity_login__screen">Login_Screen</string>
    <string name="welcome">Welcome to the \nTanishq Virtual Catalogue</string>
    <string name="username">USER NAME</string>
    <string name="user_name">USER NAME</string>
    <string name="title">TITLE</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_otp">ENTER OTP</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="thank_you">THANK YOU</string>
    <string name="for_log">FOR LOGGING IN</string>
    <string name="asif_sb">ASIF SB</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="logout">LOGOUT</string>
    <string name="done">Done</string>
    <string name="clear_all">Clear All</string>
    <string name="feedback">Feedback</string>
    <string name="userman">User Manual</string>
    <string name="collection">COLLECTION</string>
    <string name="not_applicable">Not Applicable</string>
    <string name="view_coll">VIEW COLLECTION</string>
    <string name="rs">\u20B9</string>
    <string name="subject">SUBJECT</string>
    <string name="email">EMAIL</string>
    <string name="price"><i>Price - </i></string>
    <string name="message">MESSAGE</string>
    <string name="Back"> Back </string>
    <string name="send">SEND</string>
    <string name="cancel">CANCEL</string>
    <string name="feedback_cap">FEEDBACK</string>
    <string name="mail_wish">MAIL_WISHLIST</string>
    <string name="help">HELP</string>
    <string name="user_manual">USER MANUAL</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="all_collection"></string>
    <string name="main_collection">MAIN COLLECTIONS</string>
    <string name="wish_list">WISH LIST</string>
    <string name="compare">COMPARE</string>
    <string name="divyam">DIVYAM</string>
    <string name="no_wishlist">No favourities yet?\nStart saving them right away!\n(Go to Collections)</string>
    <string name="no_compare">Compare all your favourite \npieces at one place</string>
    <string name="no_list">No Product for this Category !</string>
    <string name="coming_soon">Coming Soon !</string>

    <string name="user_manual_text">Welcome to Tanishq Galleria,your virtual catalogue! \nGain access into Tanishq\'s vast reservior of stunning jewellery, add
    products to customer\'s wishlist, compare product side by side and lots more! \n\nRead on to familiarize yourself with Tanishq Galleria. \n\n
    TO VIEW CATALOGUE \n\n1.Get started by logging into the app using your <u>user name</u> and <u>mobile number</u>.Click \'Submit\' to recieve an <u>OTP</u> on the \tmobile number provided
        by you.\n2.Enter OTP in the slot provided and press \'Enter\' to log in. \n3.A pop-up banner of the latest collection from Tanishq will fill the screen.You may choose to close it.
        \n4.Once logged in, choose the collection you wish to explore or use the navigation icon on the top left corner to see the list \tof filters. \nRefine your search by selecting across the
        <u>Categories</u> , <u>Collections</u> , <u>Occasions</u> and <u>Materials</u>  \n5.you will now view the products. Click on individual product to view their details. Select to add products to the wishlist, or \tclick
        on to add them to the list of products to <u>Compare</u> .Add up to 6 products in the wishlist and compare up to 3 products. \n\nFOR HELP AND QUERIES \n\n1.Click on to view the list of functions
        you can perform using the app. \n2.To update the inventory, click on the <u>Update Inventory</u> Button. \n3.To make a customer product request, Click on the <u>Product Request</u> button.
    Fill the form provided on the page with \tdetails of the customer and press \'Submit\'. \n4.To submit the customer query, click on the <u>Customer query</u> button.Fill the form provided on the page
    and press \'Submit\'. \n5.To submit a feedback from a customer, click on the <u>Feedback</u> button. Choose from the list of subjects, fill in the detailed \tfeed back and press \'Send\' button.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="temp">\u2023 </string>


    <string-array name="navigation_list_items">
        <item>Main collections</item>
        <item>WishList</item>
        <item>Compare</item>
        <item>Help</item>
        <!--<item>campaign</item>-->
        <item>Log out</item>
    </string-array>

    <string-array name="filter_main_list">
        <item>Category</item>
        <item>Collection</item>
        <item>Grammage</item>
        <item>Karatage</item>
        <item>Material</item>
        <item>Occasion</item>
        <item>Pricebar</item>
    </string-array>

</resources>
