<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FeedBack">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_cap"
            android:textColor="@color/tanishq_gold"
            android:textSize="20sp"
            android:id="@+id/tv_feed" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/user_name"
                    android:textColor="@color/tanishq_gold"
                    android:textSize="19sp" />


                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bt_border_gold"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/tanishq_gold"
                    android:textSize="19sp">

                </EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/email"
                    android:textColor="@color/tanishq_gold"
                    android:textSize="19sp" />


                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bt_border_gold"
                    android:padding="10dp"
                    android:singleLine="true"
                    android:textColor="@color/tanishq_gold"
                    android:textSize="19sp">

                </EditText>

            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/tv_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/subject"
            android:textColor="@color/tanishq_gold"
            android:textSize="19sp" />


        <EditText
            android:id="@+id/et_subject"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_border_gold"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/tanishq_gold"
            android:textSize="19sp">

        </EditText>


        <TextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/message"
            android:textColor="@color/tanishq_gold"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_border_gold"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:maxLines="4"
            android:inputType="textLongMessage"
            android:padding="10dp"
            android:textColor="@color/tanishq_gold"
            android:textSize="19sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/bt_dark_gold"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/send"
                android:textColor="@color/tanishq_gold"
                android:textSize="19sp" />

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/bt_dark_gold"
                android:padding="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:text="@string/cancel"
                android:textColor="@color/tanishq_gold"
                android:textSize="19sp"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
