<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.feet.tanishq.fragments.Mail_WishList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mail_wish"
            android:textColor="@color/tanishq_gold"
            android:textSize="20sp"
            android:id="@+id/tv_mail" />

    </LinearLayout>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/tanishq_gold"
                    android:textSize="19sp"
                    android:id="@+id/tv_title" />


                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/tanishq_gold"
                    android:background="@drawable/bt_border_gold"
                    style="@style/Base.Widget.AppCompat.Spinner"
                    android:textSize="19sp"
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:singleLine="true">

                </android.support.v7.widget.AppCompatSpinner>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/tanishq_gold"
                    android:textSize="19sp"
                    android:id="@+id/tv_name" />


                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="@color/tanishq_gold"
                    android:background="@drawable/bt_border_gold"
                    android:textSize="19sp"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="true">

                </EditText>

            </LinearLayout>
        </LinearLayout>





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:layout_marginTop="20dp"
            android:textColor="@color/tanishq_gold"
            android:textSize="19sp"
            android:id="@+id/tv_mobile" />


        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColor="@color/tanishq_gold"
            android:background="@drawable/bt_border_gold"
            android:textSize="19sp"
            android:padding="10dp"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:singleLine="true">

        </EditText>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="10dp"
            android:textColor="@color/tanishq_gold"
            android:textSize="19sp"
            android:id="@+id/tv_email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bt_border_gold"
            android:textColor="@color/tanishq_gold"
            android:textSize="19sp"
            android:padding="10dp"
            android:gravity="top"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:id="@+id/et_email" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:layout_marginRight="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/bt_dark_gold"
                android:textColor="@color/tanishq_gold"
                android:textSize="19sp"
                android:id="@+id/bt_send" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginLeft="5dp"
                android:padding="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:background="@drawable/bt_dark_gold"
                android:textColor="@color/tanishq_gold"
                android:textSize="19sp"
                android:visibility="gone"
                android:id="@+id/bt_cancel" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
