<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:id="@+id/rl_main"
    tools:context="com.feet.tanishq.Login_Screen">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:src="@drawable/tanishq_unit_login_page"
            android:id="@+id/iv_logo2" />

        <LinearLayout
            android:id="@+id/ll_login"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="16sp"
                android:letterSpacing="1.2"
                android:lineSpacingMultiplier="1.2"
                android:gravity="center"
                android:textColor="@color/tanishq_gold"
                android:layout_marginTop="20dp"
                android:id="@+id/tv_welcome" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:textColorHint="@color/tanishq_gold"
                android:padding="5dp"
                android:background="@drawable/et_border_gold"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/tanishq_gold"
                android:layout_marginTop="20dp"
                android:id="@+id/et_username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="phone"
                android:hint="@string/mobile_number"
                android:gravity="center"
                android:textColorHint="@color/tanishq_gold"
                android:padding="5dp"
                android:background="@drawable/et_border_gold"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/tanishq_gold"
                android:id="@+id/et_mobile" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/submit"
                android:textSize="14sp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:background="@drawable/bt_dark_gold"
                android:textColor="@color/tanishq_gold"
                android:id="@+id/bt_submit" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_otp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center">


            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="number"
                android:hint="@string/enter_otp"
                android:textColorHint="@color/tanishq_gold"
                android:gravity="center"
                android:padding="5dp"
                android:background="@drawable/et_border_gold"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/tanishq_gold"
                android:id="@+id/et_otp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/submit"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/bt_dark_gold"
                    android:textColor="@color/tanishq_gold"
                    android:id="@+id/bt_submit_otp"
                    />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/resend_otp"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/bt_dark_gold"
                    android:textColor="@color/tanishq_gold"
                    android:id="@+id/bt_resend_otp"
                    />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
